--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "license": "ISC",
   "dependencies": {
     "commander": "^2.20.0",
+    "kexec": "^3.0.0",
     "lodash": "^4.17.11",
     "untildify": "^3.0.3",
     "uuid": "^3.3.2",
